--- a/snippets/api_js_annotate_url.html
+++ b/snippets/api_js_annotate_url.html
@@ -8,17 +8,14 @@
   </head>
   <body>
     <p>This sample shows how to annotate text using tagtog, the API and JavaScript. You can serve this page from your local server.</p>
-    <p><button>Annotate PubMed abstracts and check the result in console</button></p>
+    <p><button>Annotate an URL and check the result in console</button></p>
     <script>
       function annotateText() {
-        fetch('https://www.tagtog.net/-api/documents/v1?project=yourProject&owner=yourUsername&idType=PMID&ids=23596191,29438695&output=ann.json', {
-          method: 'POST',
-          headers: {'Authorization' : "Basic " + btoa('yourUsername' + ":" + 'yourPassword'), 
-                    'Accept': 'application/json', 
-                    'Content-Type': 'application/json',
-                  },
-        }).then(response => response.json()).then(json => {
-          console.log(json);
+        fetch('https://www.tagtog.net/-api/documents/v1?project=yourProject&owner=yourUsername&url=https://en.wikipedia.org/wiki/Autonomous_cruise_control_system&output=weburl', {
+          method: 'GET',
+          headers: {'Authorization' : "Basic " + btoa('yourUsername' + ":" + 'yourPassword')},
+        }).then(response => response.text()).then(text => {
+          console.log(text);
         }).catch(function(error) {
           console.log('Error: ', error);
         });
