--- a/snippets/api_js_annotate_url.html
+++ b/snippets/api_js_annotate_url.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p>This sample shows how to annotate text using tagtog, the API and JavaScript. You can serve this page from your local server.</p>
-    <p><button>Annotate an URL and check the result in console</button></p>
+    <p><button>Annotate a URL and check the result in console</button></p>
     <script>
       function annotateText() {
         fetch('https://www.tagtog.net/-api/documents/v1?project=yourProject&owner=yourUsername&url=https://en.wikipedia.org/wiki/Autonomous_cruise_control_system&output=weburl', {
