--- a/snippets/api_js_annotate_files.html
+++ b/snippets/api_js_annotate_files.html
@@ -16,7 +16,7 @@
         var data = new FormData()
         data.append("files", input.files[0])
 
-        fetch('https://www.tagtog.net/-api/documents/v1?project=yourProject&owner=yourUsername&output=ann.json', {
+        fetch('https://www.tagtog.com/-api/documents/v1?project=yourProject&owner=yourUsername&output=ann.json', {
           method: 'POST',
           headers: {'Authorization' : "Basic " + btoa('yourUsername' + ":" + 'yourPassword')},
           body: data
@@ -26,7 +26,7 @@
           console.log('Error: ', error);
         });
       }
-    
+
       var submitBtn = document.querySelector('button');
       submitBtn.addEventListener('click', annotateText);
     </script>
